Bundle of redis-ha fixes
Streamlining init process to only require one kind of Redis server in addition to the Sentinels. The Redis instances deterministically pick their own master now.
Depends on quay.io/ianmaddox/redis:4.0.6
Tightening outage detection
Adding labels for diagnostics
Using Redis 4.0.6
Making Sentinels responsible for moving Redis boxes in/out of master LB on promotion/demotion using labels
Chart version now 1.1.0

--- a/stable/redis-ha/templates/redis-sentinel-deployment.yaml
+++ b/stable/redis-ha/templates/redis-sentinel-deployment.yaml
@@ -3,23 +3,14 @@ kind: Deployment
 metadata:
   name: {{ template "fullname" . }}-sentinel
 spec:
-  replicas: {{ .Values.replicas.sentinel }}
+  replicas: {{ .Values.replicas.sentinels }}
   template:
     metadata:
       labels:
-        name: redis-sentinel
-        redis-sentinel: "true"
-        role: sentinel
+        app: "redis-ha"
+        name: "redis-sentinel"
 {{ include "labels.standard" . | indent 8 }}
     spec:
-      {{- if .Values.nodeSelector }}
-      nodeSelector:
-{{ toYaml .Values.nodeSelector | indent 8 }}
-      {{- end }}
-      {{- if .Values.tolerations }}
-      tolerations:
-{{ toYaml .Values.tolerations | indent 8 }}
-      {{- end }}
       containers:
       - name: sentinel
         image: {{ .Values.redis_image }}
