--- a/stable/redis-ha/templates/redis-pvc.yaml
+++ b/stable/redis-ha/templates/redis-pvc.yaml
@@ -3,7 +3,7 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: {{ template "fullname" . }}-master
+  name: {{ template "fullname" . }}-pvc
   labels:
 {{ include "labels.standard" . | indent 4 }}
   annotations:
